--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.117.1",
-    "sqlalchemy>=2.0.43",
+    "pydantic[email]>=2.11.9",
+    "python-dotenv>=1.1.1",
     "uvicorn>=0.37.0",
 ]
 
