--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.db
+*.sqlite3
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -5,7 +7,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+data/
 # Distribution / packaging
 .Python
 build/
