--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "argon2-cffi>=25.1.0",
     "fastapi>=0.117.1",
     "pydantic[email]>=2.11.9",
+    "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.34",
     "uvicorn>=0.37.0",
