--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ dependencies = [
     "fastapi>=0.117.1",
     "httpx>=0.28.1",
     "pydantic[email]>=2.11.9",
+    "pydantic-settings>=2.6.1",
     "pyjwt>=2.10.1",
-    "python-dotenv>=1.1.1",
     "redis>=6.4.0",
     "sqlalchemy>=2.0.34",
     "uvicorn>=0.37.0",
