--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "redis>=6.4.0",
     "sqlalchemy>=2.0.34",
     "uvicorn>=0.37.0",
+    "kubernetes>=34.1.0",
 ]
 
 [dependency-groups]
