Uploading jobs output directory to AWS S3

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,10 @@ GITHUB_REDIRECT_URI=
 FRONTEND_HOME=
 REDIS_URL=
 JOB_NAMESPACE=
+CLUSTER_TOKEN=
+CLUSTER_URL=
+API_BASE_URL=
+AWS_ACCES_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_S3_BUCKET=
