--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "sqlalchemy>=2.0.34",
     "uvicorn>=0.37.0",
     "kubernetes>=34.1.0",
+    "boto3>=1.40.59",
 ]
 
 [dependency-groups]
