--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "uvicorn>=0.37.0",
     "kubernetes>=34.1.0",
     "boto3>=1.40.59",
+    "psycopg[binary]>=3.2.12",
+    "alembic>=1.17.0",
 ]
 
 [dependency-groups]
