--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "pytest>=8.4.2",
-    "ruff>=0.13.3",
-    "ty>=0.0.1a21",
-]
+dev = ["pytest>=8.4.2", "ruff>=0.13.3", "ty>=0.0.1a21"]
+
+[tool.pytest.ini_options]
+filterwarnings = ["ignore::sqlalchemy.exc.SAWarning"]
