DynamoDB first changes

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,6 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=
 FRONTEND_HOME=
-REDIS_URL=
 JOB_NAMESPACE=
 CLUSTER_TOKEN=
 CLUSTER_URL=
@@ -22,3 +21,4 @@ AWS_REGION=
 AWS_S3_BUCKET=
 DATABASE_URL=
 ECR_ARN=
+DYNAMODB_OAUTH_TABLE=
