--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,11 @@ JOB_NAMESPACE=
 CLUSTER_TOKEN=
 CLUSTER_URL=
 API_BASE_URL=
-AWS_ACCES_KEY_ID=
+AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_S3_BUCKET=
 DATABASE_URL=
 ECR_ARN=
 DYNAMODB_OAUTH_TABLE=
+DYNAMODB_CLUSTER_CACHE_TABLE=
