fix naming of ecr_url setting

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_S3_BUCKET=
 DATABASE_URL=
-ECR_ARN=
+ECR_URL=
 DYNAMODB_OAUTH_TABLE=
 DYNAMODB_CLUSTER_CACHE_TABLE=
 DYNAMODB_ENDPOINT=
