--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,12 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["pytest>=8.4.2", "ruff>=0.13.3", "ty>=0.0.1a21"]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-xdist>=3.8.0",
+    "ruff>=0.13.3",
+    "ty>=0.0.1a21",
+]
 
 [tool.pytest.ini_options]
 filterwarnings = ["ignore::sqlalchemy.exc.SAWarning"]
