--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,10 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "pytest>=8.4.2",
-    "pytest-xdist>=3.8.0",
-    "ruff>=0.13.3",
-    "ty>=0.0.1a21",
-]
+dev = ["pytest>=8.4.2", "pytest-xdist>=3.8.0", "ruff>=0.13.3", "ty>=0.0.2"]
 
 [tool.pytest.ini_options]
 filterwarnings = ["ignore::sqlalchemy.exc.SAWarning"]
+
+[tool.ty.src]
+exclude = ["app/tests"]
