Dynamic clusters credentials

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,7 @@ GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=
 FRONTEND_HOME=
 JOB_NAMESPACE=
-CLUSTER_TOKEN=
-CLUSTER_URL=
+K8S_SECRET_ID=
 API_BASE_URL=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
