--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=
 FRONTEND_HOME=
+CORS_ALLOW_ORIGINS=
 JOB_NAMESPACE=
 K8S_SECRET_ID=
 API_BASE_URL=
